[tool.poetry]
name = "adv-mla-lab-3"
version = "0.1.0"
description = ""
authors = ["ashley <Ashley.X.Goh@student.uts.edu.au>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "1.5.1"
pandas = "2.2.2"
jupyterlab = "4.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
